--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "description": "",
   "dependencies": {
     "@google/genai": "^1.30.0",
+    "@imagekit/nodejs": "^7.1.1",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "uuid": "^13.0.0"
   }
 }
